<resources>
    <string name="app_name">Musings on Love</string>
    <string name="index">Index</string>
    <string name="_7_krishna_instructs_uddhava">7. Krishna Instructs Uddhava</string>
    <string name="_8_the_story_of_pingala">8. The Story of Pingala</string>
    <string name="_9_detachment_from_everything_material">9. Detachment from Everything Material</string>
    <string name="_10_the_nature_of_fruitive_activity">10. The Nature of Fruitive Activity</string>
    <string name="_11_the_symptoms_of_conditioned_and_liberated_living_entities">11. The Symptoms of Conditioned and Liberated Living Entities</string>
    <string name="_12_beyond_renunciation_and_knowledge">12. Beyond Renunciation and Knowledge</string>
    <string name="_13_the_hamsa_avatar_answers_the_questions_of_the_sons_of_brahma">13. The Hamsa-avatar Answers the Questions of the Sons of Brahma</string>
    <string name="_14_krishna_explains_the_yoga_system_to_uddhava">14. Krishna Explains the Yoga System to Uddhava</string>
    <string name="_15_krishna_s_description_of_mystic_yoga_perfections">15. Krishna\'s Description of Mystic Yoga Perfections</string>
    <string name="_16_the_lord_s_opulence">16. The Lord\'s Opulence</string>
    <string name="_17_krishna_s_description_of_the_varnashrama_system">17. Krishna\'s Description of the Varnashrama System</string>
    <string name="_18_description_of_varnashrama_dharma">18. Description of Varnashrama-dharma</string>
    <string name="_19_the_perfection_of_spiritual_knowledge">19. The Perfection of Spiritual Knowledge</string>
    <string name="_20_pure_devotional_service_surpasses_knowledge_and_detachment">20. Pure Devotional Service Surpasses Knowledge and Detachment</string>
    <string name="_21_krishna_s_explanation_of_the_vedic_path">21. Krishna\'s Explanation of the Vedic Path</string>
    <string name="_22_enumeration_of_the_elements_of_material_creation">22. Enumeration of the Elements of Material Creation</string>
    <string name="_23_the_song_of_the_avanti_brahmana">23. The Song of the Avanti Brahmana</string>
    <string name="_24_the_philosophy_of_sankhya">24. The Philosophy of Sankhya</string>
    <string name="_25_the_three_modes_of_nature_and_beyond">25. The Three Modes of Nature and Beyond</string>
    <string name="_26_the_aila_gita">26. The Aila-gita</string>
    <string name="_27_krishna_s_instructions_on_the_process_of_deity_worship">27. Krishna\'s Instructions on the Process of Deity Worship</string>
    <string name="_28_jnana_yoga">28. Jnana-yoga</string>
    <string name="_29_bhakti_yoga">29. Bhakti-yoga</string>
    <string name="loading">Loading</string>
    <string name="part_1">Beauty of Love</string>
    <string name="part_2">Inner Ramyana &amp; Gopika Gita</string>
    <string name="part_3">Meditations on GGS</string>
    <string name="part_4">Meditations on Love</string>
    <string name="part_5">Power of Freedom</string>
    <string name="part_6">Narad Bhakti Sutras</string>
    <string name="part_7">Rehras Sahib</string>
    <string name="chapter7">7. Krishna Instructs Uddhava</string>
    <string name="chapter8">8. The Story of Pingala</string>
    <string name="chapter9">9. Detachment from Everything Material</string>
    <string name="chapter10">10. The Nature of Fruitive Activity</string>
    <string name="chapter11">11. The Symptoms of Conditioned and Liberated Living Entities</string>
    <string name="chapter12">12. Beyond Renunciation and Knowledge</string>
    <string name="chapter13">13. The Hamsa-avatar Answers the Questions of the Sons of Brahma</string>
    <string name="chapter14">14. Krishna Explains the Yoga System to Uddhava</string>
    <string name="chapter15">15. Krishna\'s Description of Mystic Yoga Perfections</string>
    <string name="chapter16">16. The Lord\'s Opulence</string>
    <string name="chapter17">17. Krishna\'s Description of the Varnashrama System</string>
    <string name="chapter18">18. Description of Varnashrama-dharma</string>
    <string name="chapter19">19. The Perfection of Spiritual Knowledge</string>
    <string name="chapter20">20. Pure Devotional Service Surpasses Knowledge and Detachment</string>
    <string name="chapter21">21. Krishna\'s Explanation of the Vedic Path</string>
    <string name="chapter22">22. Enumeration of the Elements of Material Creation</string>
    <string name="chapter23">23. The Song of the Avanti Brahmana</string>
    <string name="chapter24">24. The Philosophy of Sankhya</string>
    <string name="chapter25">25. The Three Modes of Nature and Beyond</string>
    <string name="chapter26">26. The Aila-gita</string>
    <string name="chapter27">27. Krishna\'s Instructions on the Process of Deity Worship</string>
    <string name="chapter28">28. Jnana-yoga</string>
    <string name="chapter29">29. Bhakti-yoga</string>
    <string-array name="part_one">
        <item>Beauty of Love</item>
    </string-array>
    <string-array name="part_two">
        <item>Inner Ramyana &amp; Gopika Gita</item>
    </string-array>
    <string-array name="part_three">
        <item>Meditations on GGS</item>
    </string-array>
    <string-array name="part_four">
        <item>Meditations on Love</item>
    </string-array>
    <string-array name="part_five">
        <item>Narad Bhakti Sutras</item>
    </string-array>
    <string-array name="part_six">
        <item>Power of Freedom</item>
    </string-array>
    <string-array name="part_seven">
        <item>Rehras Sahib</item>
    </string-array>
    <string-array name="seven_arrays">
        <item>Verse 7.1</item>
        <item>Verse 7.2</item>
        <item>Verse 7.3</item>
        <item>Verse 7.4</item>
        <item>Verse 7.5</item>
        <item>Verse 7.6</item>
        <item>Verse 7.7</item>
        <item>Verse 7.8</item>
        <item>Verse 7.9</item>
        <item>Verse 7.10</item>
        <item>Verse 7.11</item>
        <item>Verse 7.12</item>
        <item>Verse 7.13</item>
        <item>Verse 7.14</item>
        <item>Verse 7.15</item>
        <item>Verse 7.16</item>
        <item>Verse 7.17</item>
        <item>Verse 7.18</item>
        <item>Verse 7.19</item>
        <item>Verse 7.20</item>
        <item>Verse 7.21</item>
        <item>Verse 7.22</item>
        <item>Verse 7.23</item>
        <item>Verse 7.24</item>
        <item>Verse 7.25</item>
        <item>Verse 7.26</item>
        <item>Verse 7.27</item>
        <item>Verse 7.28</item>
        <item>Verse 7.29</item>
        <item>Verse 7.30</item>
        <item>Verse 7.31</item>
        <item>Verse 7.32</item>
        <item>Verse 7.33</item>
        <item>Verse 7.34</item>
        <item>Verse 7.35</item>
        <item>Verse 7.36</item>
        <item>Verse 7.37</item>
        <item>Verse 7.38</item>
        <item>Verse 7.39</item>
        <item>Verse 7.40</item>
        <item>Verse 7.41</item>
        <item>Verse 7.42</item>
        <item>Verse 7.43</item>
        <item>Verse 7.44</item>
        <item>Verse 7.45</item>
        <item>Verse 7.46</item>
        <item>Verse 7.47</item>
        <item>Verse 7.48</item>
        <item>Verse 7.49</item>
        <item>Verse 7.50</item>
        <item>Verse 7.51</item>
        <item>Verse 7.52</item>
        <item>Verse 7.53</item>
        <item>Verse 7.54</item>
        <item>Verse 7.55</item>
        <item>Verse 7.56</item>
        <item>Verse 7.57</item>
        <item>Verse 7.58</item>
        <item>Verse 7.59</item>
        <item>Verse 7.60</item>
        <item>Verse 7.61</item>
        <item>Verse 7.62</item>
        <item>Verse 7.63</item>
        <item>Verse 7.64</item>
        <item>Verse 7.65</item>
        <item>Verse 7.66</item>
        <item>Verse 7.67</item>
        <item>Verse 7.68</item>
        <item>Verse 7.69</item>
        <item>Verse 7.70</item>
        <item>Verse 7.71</item>
        <item>Verse 7.72</item>
        <item>Verse 7.73</item>
        <item>Verse 7.74</item>
    </string-array>
    <string-array name="eight_array">
        <item> Verse 8.1</item>
        <item> Verse 8.2</item>
        <item> Verse 8.3</item>
        <item> Verse 8.4</item>
        <item> Verse 8.5</item>
        <item> Verse 8.6</item>
        <item> Verse 8.7</item>
        <item> Verse 8.8</item>
        <item> Verse 8.9</item>
        <item> Verse 8.10</item>
        <item> Verse 8.11</item>
        <item> Verse 8.12</item>
        <item> Verse 8.13</item>
        <item> Verse 8.14</item>
        <item> Verse 8.15</item>
        <item> Verse 8.16</item>
        <item> Verse 8.17</item>
        <item> Verse 8.18</item>
        <item> Verse 8.19</item>
        <item> Verse 8.20</item>
        <item> Verse 8.21</item>
        <item> Verse 8.22</item>
        <item> Verse 8.23</item>
        <item> Verse 8.24</item>
        <item> Verse 8.25</item>
        <item> Verse 8.26</item>
        <item> Verse 8.27</item>
        <item> Verse 8.28</item>
        <item> Verse 8.29</item>
        <item> Verse 8.30</item>
        <item> Verse 8.31</item>
        <item> Verse 8.32</item>
        <item> Verse 8.33</item>
        <item> Verse 8.34</item>
        <item> Verse 8.35</item>
        <item> Verse 8.36</item>
        <item> Verse 8.37</item>
        <item> Verse 8.38</item>
        <item> Verse 8.39</item>
        <item> Verse 8.40</item>
        <item> Verse 8.41</item>
        <item> Verse 8.42</item>
        <item> Verse 8.43</item>
        <item> Verse 8.44</item>
    </string-array>
    <string-array name="nine_array">
        <item>  Verse 9.1</item>
        <item>  Verse 9.2</item>
        <item>  Verse 9.3</item>
        <item>  Verse 9.4</item>
        <item>  Verse 9.5</item>
        <item>  Verse 9.6</item>
        <item>  Verse 9.7</item>
        <item>  Verse 9.8</item>
        <item>  Verse 9.9</item>
        <item>  Verse 9.10</item>
        <item>  Verse 9.11</item>
        <item>  Verse 9.12</item>
        <item>  Verse 9.13</item>
        <item>  Verse 9.14</item>
        <item>  Verse 9.15</item>
        <item>  Verse 9.16</item>
        <item>  Verse 9.17</item>
        <item>  Verse 9.18</item>
        <item>  Verse 9.19</item>
        <item>  Verse 9.20</item>
        <item>  Verse 9.21</item>
        <item>  Verse 9.22</item>
        <item>  Verse 9.23</item>
        <item>  Verse 9.24</item>
        <item>  Verse 9.25</item>
        <item>  Verse 9.26</item>
        <item>  Verse 9.27</item>
        <item>  Verse 9.28</item>
        <item>  Verse 9.29</item>
        <item>  Verse 9.30</item>
        <item>  Verse 9.31</item>
        <item>  Verse 9.32</item>
        <item>  Verse 9.33</item>
    </string-array>
    <string-array name="ten_array">
        <item>   Verse 10.1</item>
        <item>   Verse 10.2</item>
        <item>   Verse 10.3</item>
        <item>   Verse 10.4</item>
        <item>   Verse 10.5</item>
        <item>   Verse 10.6</item>
        <item>   Verse 10.7</item>
        <item>   Verse 10.8</item>
        <item>   Verse 10.9</item>
        <item>   Verse 10.10</item>
        <item>   Verse 10.11</item>
        <item>   Verse 10.12</item>
        <item>   Verse 10.13</item>
        <item>   Verse 10.14</item>
        <item>   Verse 10.15</item>
        <item>   Verse 10.16</item>
        <item>   Verse 10.17</item>
        <item>   Verse 10.18</item>
        <item>   Verse 10.19</item>
        <item>   Verse 10.20</item>
        <item>   Verse 10.21</item>
        <item>   Verse 10.22</item>
        <item>   Verse 10.23</item>
        <item>   Verse 10.24</item>
        <item>   Verse 10.25</item>
        <item>   Verse 10.26</item>
        <item>   Verse 10.27</item>
        <item>   Verse 10.28</item>
        <item>   Verse 10.29</item>
        <item>   Verse 10.30</item>
        <item>   Verse 10.31</item>
        <item>   Verse 10.32</item>
        <item>   Verse 10.33</item>
        <item>   Verse 10.34</item>
        <item>   Verse 10.35</item>
        <item>   Verse 10.36</item>
    </string-array>
</resources>