<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    android:id="@+id/part1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:onClick="PartOne"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardElevation="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:padding="16dp"
                        android:text="@string/part_1"
                        android:textAlignment="center"
                        android:fontFamily="@font/josefinsans_regular"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@android:color/black" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/part2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:onClick="PartTwo"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardElevation="8dp"
                   >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:padding="3dp"
                        android:text="@string/part_2"
                        android:textAlignment="center"
                        android:fontFamily="@font/josefinsans_regular"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@android:color/black" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    android:id="@+id/part3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:onClick="PartThree"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardElevation="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:padding="4dp"
                        android:text="@string/part_3"
                        android:textAlignment="center"
                        android:fontFamily="@font/josefinsans_regular"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@android:color/black" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/part4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:onClick="PartFour"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardElevation="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:padding="4dp"
                        android:text="@string/part_4"
                        android:textAlignment="center"
                        android:fontFamily="@font/josefinsans_regular"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@android:color/black" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    android:id="@+id/part5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:onClick="PartFive"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardElevation="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:padding="4dp"
                        android:text="@string/part_5"
                        android:textAlignment="center"
                        android:fontFamily="@font/josefinsans_regular"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@android:color/black" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/part6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:onClick="PartSix"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardElevation="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:padding="4dp"
                        android:text="@string/part_6"
                        android:textAlignment="center"
                        android:fontFamily="@font/josefinsans_regular"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@android:color/black"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    android:id="@+id/part7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:onClick="PartSeven"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardElevation="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:text="@string/part_7"
                        android:padding="3dp"
                        android:textAlignment="center"
                        android:fontFamily="@font/josefinsans_regular"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@android:color/black"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:onClick="PartSix"
                    app:cardElevation="12dp"
                    android:visibility="invisible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:background="@drawable/background"
                        android:padding="16dp"
                        android:text="@string/part_6"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="italic" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>